# prometheus-adlermanager

./: .gitignore  LICENSE  Pipfile  README.md  app.py  dotenv.example  motd.txt  mypy.ini  prometheus-mock.sh  pyproject.toml  setup.cfg
.woodpecker/: linters.yml
adlermanager/: AdlerManagerSSHProtocol.py  AdlerManagerTokenResource.py  Config.py  IncidentManager.py  SitesManager.py  TokenResource.py  WebRoot.py  __init__.py  conch_helpers.py  utils.py
adlermanager/templates/: template.j2
backend/: Pipfile  app.py
backend/adlermanager/: AdlerManagerSSHProtocol.py  AdlerManagerTokenResource.py  Config.py  SiteManager.py  __init__.py
example-data/sites/: localhost
example-data/sites/status.lab.ungleich.ch/: last_updated.txt  site.yml  tokens.txt
example-data/sites/ungleich.ch/: site.yml
example-data/ssh/users/: testuser.key
frontend/: .gitignore  Makefile  README.md  elm.json  index.html  notes.txt
frontend/src/: Main.elm  Model.elm  Subscriptions.elm  Update.elm  Utils.elm  View.elm
src/adlermanager/: AdlerManagerSSHProtocol.py  AdlerManagerTokenResource.py  Config.py  IncidentManager.py  SitesManager.py  TokenResource.py  WebRoot.py  __init__.py  __main__.py  _version.py  conch_helpers.py  model.py  utils.py
src/adlermanager/templates/: template.j2
typings/klein/: __init__.pyi  _app.pyi  _decorators.pyi  _dihttp.pyi  _form.pyi  _headers.pyi  _headers_compat.pyi  _iform.pyi  _imessage.pyi  _interfaces.pyi  _isession.pyi  _message.pyi  _plating.pyi  _request.pyi  _request_compat.pyi  _requirer.pyi  _resource.pyi  _response.pyi  _session.pyi  _tubes.pyi  _version.pyi  app.pyi  interfaces.pyi  resource.pyi
typings/klein/test/: __init__.pyi
typings/twisted/python/: filepath.pyi
